[feature] create unit test for repositories